--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -191,6 +191,29 @@ body.page-id-5782 {
   flex: 3;
   padding: 30px;
 }
+.order_error_msg_wrapper {
+  background-color: #f3f5fa;
+  height: 100px;
+  border-radius: 15px;
+  padding: 10px;
+}
+.order_error_msg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 16px;
+  height: 100%;
+  color: #fd334f;
+  background-color: #fff;
+  border-radius: 15px;
+}
+.sellers_error {
+  color: #fd334f;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+}
 /* profiles */
 .profileSection {
   /* display: flex; */
@@ -255,9 +278,10 @@ body.page-id-5782 {
 }
 
 .profileEmail {
-  margin: 10px 0;
+  margin: 5px 0;
   color: #999999;
   font-size: 12px;
+  min-width: 250px;
 }
 
 .editProfileButton {
@@ -1641,6 +1665,33 @@ button.active svg path {
   gap: 20px;
   margin: 15px 0;
 }
+.orderDeatilsModalFooter {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+}
+.orderDetailsTotals .recentOffers_cell {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-bottom: 1px solid #edf0f7;
+  padding-bottom: 10px;
+}
+.orderDetailsTotals .recentOffers_cell:last-child {
+  padding-top: 10px;
+  border-bottom: none;
+}
+.orderDetailsTotals p {
+  margin: 0;
+  font-weight: 500;
+  width: 75px;
+}
+.orderDetailsTotals {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  margin-top: 20px;
+}
 /* Table inside modal */
 /* .order_details_popup table {
   width: 100%;
@@ -1821,10 +1872,10 @@ button.active svg path {
 }
 .sales_distribution_chart_wrapper,
 .AverageSalestabsWrapper {
-  padding: 20px;
+  padding: 30px;
 }
 .sales_distribution_chart_wrapper {
-  padding: 20px 0;
+  padding: 30px;
 }
 .sellerCentralGraphTabsWrapper .sales_distribution_tab_labels {
   justify-content: end;
@@ -2022,6 +2073,9 @@ button.active svg path {
   }
   .tabContent {
     padding: 20px;
+  }
+  .tabs_lists {
+    flex: 100%;
   }
   /* .offers_tab_recent_offer_wrap,
   .tabContent {
@@ -2231,7 +2285,7 @@ button.active svg path {
 .become_seller_form input[type="submit"] {
   margin: 10px 0;
 }
-.become_seller_form input[type="submit"] {
+.become_seller_form input {
   margin: 10px 0;
   background: #00d9f5;
   border: transparent;
@@ -2239,9 +2293,26 @@ button.active svg path {
   border-radius: 50px;
   color: #fff;
   cursor: pointer;
+  border: 1px solid #00d9f5;
 }
 .become_seller_form p {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
+}
+.become_seller_form {
+  background-color: #fff;
+  padding: 20px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 15px;
+}
+.becomeSellerWrapper {
+  background-color: #f3f5fa;
+  padding: 10px;
+  border-radius: 15px;
+}
+.become_seller_form p a {
+  text-decoration: underline;
 }
