--- a/src/components/Tabs/Domains.css
+++ b/src/components/Tabs/Domains.css
@@ -64,6 +64,10 @@
 .ws-card-contents h5 {
   font-weight: 500;
   text-align: start;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 150px;
 }
 .domains_hover_buttons div {
   background: #fff;
