--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -81,9 +81,9 @@ h6 {
   font-weight: 500;
 }
 .hover_blue_white:hover {
-  background-color: #fff;
-  border: 1px solid #00d9f5;
-  color: #00d9f5;
+  background-color: #fff !important;
+  border: 1px solid #00d9f5 !important;
+  color: #00d9f5 !important;
 }
 /* body.page-id-5284 {
   background-color: #f9fbfe;
@@ -1488,13 +1488,91 @@ button.active svg path {
 .paymentMethodcard_section label:hover {
   border: 1px solid #00d9f5;
 }
-.paymentMethodcard_section input {
+.paymentMethodcard_section input[type="radio"] {
   display: none;
 }
 .paymentMethodcard_section .selected {
   border: 1px solid #00d9f5;
   position: relative;
 }
+
+.paymentMethodcard_section .popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.paymentMethodcard_section .popup_content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 400px;
+  position: relative;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  text-align: center;
+}
+
+.paymentMethodcard_section .close_icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  color: #333;
+  cursor: pointer;
+}
+
+.paymentMethodcard_section .input_field,
+.paymentMethodcard_section .popup textarea {
+  width: 100%;
+  padding: 15px;
+  margin: 15px 0;
+  border: 1px solid #edf0f7;
+  border-radius: 50px;
+  font-size: 14px;
+  color: #001f3e;
+}
+.paymentMethodcard_section .popup textarea {
+  border-radius: 15px;
+}
+.paymentMethodcard_section .input_field::placeholder,
+.paymentMethodcard_section .popup textarea::placeholder {
+  color: #666666;
+  font-size: 12px;
+}
+.paymentMethodcard_section .popup_actions {
+  display: flex;
+  justify-content: center;
+}
+
+.paymentMethodcard_section .close_button,
+.paymentMethodcard_section .save_button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.paymentMethodcard_section .close_button {
+  background: #ddd;
+  color: #333;
+}
+
+.paymentMethodcard_section .save_button {
+  background: #00d9f5;
+  color: #fff;
+  border-radius: 50px;
+  padding: 10px 40px;
+  border: 1px solid #00d9f5;
+}
+
 /* .paymentMethodcard_section svg:not(.check_icon svg) {
   fill: #fff;
   padding: 10px;
@@ -1658,7 +1736,7 @@ button.active svg path {
   font-size: 14px;
   line-height: 1.5;
   color: #000;
-  display: flex;
+  /* display: flex; */
   align-items: center;
 }
 .orderDetailPopupBilling p {
@@ -1669,6 +1747,7 @@ button.active svg path {
   display: flex;
   align-items: start;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .orderDetailsTotals .recentOffers_cell {
   display: flex;
@@ -1692,23 +1771,7 @@ button.active svg path {
   width: 30%;
   margin-top: 20px;
 }
-/* Table inside modal */
-/* .order_details_popup table {
-  width: 100%;
-  border-collapse: collapse;
-}
 
-.order_details_popup th,
-.order_details_popup td {
-  padding: 12px 15px;
-  text-align: left;
-  border: 1px solid #ddd;
-}
-
-.order_details_popup th {
-  background-color: #f8f8f8;
-  font-weight: bold;
-} */
 .my_orders_details_table .recentOffers_row {
   width: 100%;
   display: flex;
