--- a/src/components/Tabs/AccountSettings.module.css
+++ b/src/components/Tabs/AccountSettings.module.css
@@ -96,6 +96,11 @@
   border-radius: 50px;
   border: 2px solid #00d9f5;
 }
+/* .preferneces_settings select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background-image: url("image/chevron-down.svg");
+} */
 .preferneces_settings div {
   margin: 20px 0;
 }
