--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -109,6 +109,7 @@ body.page-id-5782 {
 }
 .tabs_lists {
   flex: 1;
+  height: 100%;
 }
 .tabLabels {
   display: flex;
@@ -190,6 +191,8 @@ body.page-id-5782 {
 .tabContent {
   flex: 3;
   padding: 30px;
+  max-height: 900px;
+  overflow-y: auto;
 }
 .order_error_msg_wrapper {
   background-color: #f3f5fa;
@@ -1740,8 +1743,10 @@ button.active svg path {
   align-items: center;
 }
 .orderDetailPopupBilling p {
-  gap: 20px;
+  /* gap: 20px; */
   margin: 15px 0;
+  display: flex;
+  gap: 8px;
 }
 .orderDeatilsModalFooter {
   display: flex;
@@ -1862,7 +1867,7 @@ button.active svg path {
 }
 /* sales deatils */
 .sales_first_column_wrapper .sales_first_column_card {
-  flex: 1;
+  flex: 2.5;
   border: 1px solid #edf0f7;
   background-color: #fff;
   border-radius: 15px;
@@ -1882,7 +1887,7 @@ button.active svg path {
   margin-left: auto;
 }
 .sales_first_column_wrapper div:last-child {
-  flex: 2;
+  flex: 4.5;
 }
 .dashboard_sales_details .offerSorts {
   margin-left: auto;
