--- a/src/components/Tabs/AccountSettings.module.css
+++ b/src/components/Tabs/AccountSettings.module.css
@@ -144,6 +144,21 @@
 .notificationSettings ul {
   gap: 30px;
 }
+.logOutAllbtnWrapper input[type="button"] {
+  background: #fff;
+  border: 1px solid #00d9f5;
+  border-radius: 50px;
+  color: #00d9f5;
+  cursor: pointer;
+  margin: 5px 0;
+  padding: 5px 20px;
+}
+.logOutAllbtnWrapper {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 15px;
+}
 @media screen and (max-width: 767px) {
   .accordionContent {
     margin: 20px 10px;
