--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -1478,14 +1478,14 @@ button.active svg path {
 /* payment method */
 .paymentMethodcard_section {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   margin: 30px 0;
 }
 .paymentMethodcard_section label {
   border: 1px solid #edf0f7;
   flex: 1;
   border-radius: 10px;
-  padding: 40px 20px;
+  padding: 20px 20px;
   cursor: pointer;
 }
 .paymentMethodcard_section label:hover {
@@ -1906,6 +1906,9 @@ button.active svg path {
   display: flex;
   gap: 0px;
   justify-content: center;
+}
+.sales_distribution_tab_labels button {
+  margin-right: 0;
 }
 .AverageSalestabsWrapper .sales_distribution_tab_labels {
   justify-content: start;
