export detail feature and other changes

--- a/src/components/CardSelector/CardSelector.module.css
+++ b/src/components/CardSelector/CardSelector.module.css
@@ -34,6 +34,7 @@
 }
 .cardSelectorIndustriesWrapper .card {
   width: fit-content;
+  height: fit-content;
 }
 .card.selected {
   border: 2px solid rgb(118, 232, 249);
