--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -1910,6 +1910,17 @@ audio::-webkit-media-controls-panel {
   font-weight: 500;
   font-size: 16px;
 }
+.parentID_orders a{
+  font-size: 15px;
+  color: #00d9f5;
+  text-decoration: none;
+}
+.parentID_orders{
+  line-height: 20px;
+}
+button.myOrder_cancel_btn{
+  background-color: #fd334f;
+}
 .my_orders_details_table .recentOffers_card:first-child {
   flex: 1;
 }
@@ -2304,6 +2315,13 @@ audio::-webkit-media-controls-panel {
     width: 100% !important;
     height: 100% !important;
   }
+  .my_orders_details_table .recentOffers_card .orderTable_btn_wrapper{
+    width: 100%;
+    justify-content: center;
+  }
+  .my_orders_details_table .recentOffers_card .orderTable_btn_wrapper div.recentOffers_card_titles{
+    width: auto !important;
+  }
 }
 
 /* sales status progress bar */
@@ -2497,6 +2515,9 @@ audio::-webkit-media-controls-panel {
     /* flex: 1; */
     width: 30%;
   }
+ .my_orders_details_table .recentOffers_card .orderTable_btn_wrapper div{
+  width: auto !important;
+ }
   .dashboard_main_tabs .salesDetails_wrapper {
     flex-direction: column;
   }
