--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -113,6 +113,7 @@ body.page-id-5782 {
 .tabs_lists {
   flex: 1;
   height: 100%;
+  max-width: 360px;
 }
 .tabLabels {
   display: flex;
@@ -199,7 +200,7 @@ body.page-id-5782 {
 }
 .order_error_msg_wrapper {
   background-color: #f3f5fa;
-  height: 100px;
+  height: 80px;
   border-radius: 15px;
   padding: 10px;
 }
@@ -210,13 +211,15 @@ body.page-id-5782 {
   font-weight: 500;
   font-size: 16px;
   height: 100%;
-  color: #fd334f;
+  /* color: #fd334f; */
+  color: #001f3e;
   background-color: #fff;
   border-radius: 15px;
   padding: 20px 0;
 }
 .sellers_error {
-  color: #fd334f;
+  /* color: #fd334f; */
+  color: #001f3e;
   font-size: 16px;
   font-weight: 500;
   text-align: center;
@@ -259,7 +262,7 @@ body.page-id-5782 {
   margin: 0;
 }
 .ws_container {
-  max-width: 1400px;
+  max-width: 1440px;
   margin: auto;
   padding: 0 20px;
   margin-top: 40px;
@@ -291,7 +294,7 @@ body.page-id-5782 {
   margin: 5px 0;
   color: #999999;
   font-size: 12px;
-  min-width: 250px;
+  min-width: 200px;
 }
 
 .editProfileButton {
@@ -1910,15 +1913,15 @@ audio::-webkit-media-controls-panel {
   font-weight: 500;
   font-size: 16px;
 }
-.parentID_orders a{
+.parentID_orders a {
   font-size: 15px;
   color: #00d9f5;
   text-decoration: none;
 }
-.parentID_orders{
+.parentID_orders {
   line-height: 20px;
 }
-button.myOrder_cancel_btn{
+button.myOrder_cancel_btn {
   background-color: #fd334f;
 }
 .my_orders_details_table .recentOffers_card:first-child {
@@ -2315,11 +2318,14 @@ button.myOrder_cancel_btn{
     width: 100% !important;
     height: 100% !important;
   }
-  .my_orders_details_table .recentOffers_card .orderTable_btn_wrapper{
+  .my_orders_details_table .recentOffers_card .orderTable_btn_wrapper {
     width: 100%;
     justify-content: center;
   }
-  .my_orders_details_table .recentOffers_card .orderTable_btn_wrapper div.recentOffers_card_titles{
+  .my_orders_details_table
+    .recentOffers_card
+    .orderTable_btn_wrapper
+    div.recentOffers_card_titles {
     width: auto !important;
   }
 }
@@ -2515,9 +2521,9 @@ button.myOrder_cancel_btn{
     /* flex: 1; */
     width: 30%;
   }
- .my_orders_details_table .recentOffers_card .orderTable_btn_wrapper div{
-  width: auto !important;
- }
+  .my_orders_details_table .recentOffers_card .orderTable_btn_wrapper div {
+    width: auto !important;
+  }
   .dashboard_main_tabs .salesDetails_wrapper {
     flex-direction: column;
   }
