--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -1384,8 +1384,12 @@ audio::-webkit-media-controls-panel {
 }
 .extra_column_wrapper.expanded {
   /* max-height: fit-content; */
-  max-height: 400px;
+  max-height: 500px;
   overflow: auto;
+}
+.expandedBorder {
+  border: 2px solid #00d9f5;
+  border-radius: 10px;
 }
 /* .offer_tabs_wrapper .recent_offers_cols {
   flex-direction: column;
@@ -1710,7 +1714,7 @@ audio::-webkit-media-controls-panel {
 /* Modal overlay */
 .my_orders_modal_overlay {
   position: fixed;
-  top: 15px;
+  top: 0px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -1932,6 +1936,9 @@ audio::-webkit-media-controls-panel {
 }
 button.myOrder_cancel_btn {
   background-color: #fd334f;
+}
+button.myOrder_cancel_btn:hover {
+  background-color: #ff1f3e;
 }
 .my_orders_details_table .recentOffers_card:first-child {
   flex: 1;
