--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -1390,6 +1390,7 @@ audio::-webkit-media-controls-panel {
 .expandedBorder {
   border: 2px solid #00d9f5;
   border-radius: 10px;
+  padding-bottom: 10px;
 }
 /* .offer_tabs_wrapper .recent_offers_cols {
   flex-direction: column;
@@ -1920,11 +1921,12 @@ audio::-webkit-media-controls-panel {
 .my_orders_details_table .offer_status {
   padding: 0;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
 }
+
 .my_orders_details_table h5 {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
 }
 .parentID_orders a {
   font-size: 15px;
@@ -1943,6 +1945,7 @@ button.myOrder_cancel_btn:hover {
 .my_orders_details_table .recentOffers_card:first-child {
   flex: 1;
 }
+
 .my_orders_details_table .recentOffers_card:last-child {
   flex: 1;
 }
@@ -2555,5 +2558,11 @@ button.myOrder_cancel_btn:hover {
 @media screen and (max-width: 1300px) {
   .recentOffers_wrapper .myOffersWrap {
     flex-direction: column;
+  }
+}
+@media screen and (min-width: 1300px) {
+  .my_orders_details_table .orderTable_btn_wrapper {
+    width: 20%;
+    justify-content: end;
   }
 }
