--- a/src/components/Tabs/Dashboard.css
+++ b/src/components/Tabs/Dashboard.css
@@ -283,7 +283,12 @@
   width: 100%;
   overflow: hidden;
 }
-
+@media screen and (max-width: 1300px) {
+  .dashboard_domains_cards_wrapper .ws-cards-container-noHover {
+    /* width: calc(25% - 15px); */
+    flex: 0 0 calc(33% - 15px);
+  }
+}
 @media screen and (max-width: 1024px) {
   .dashboard_domains_cards_wrapper .ws-cards-container-noHover {
     /* width: calc(25% - 15px); */
