--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -675,6 +675,7 @@ audio::-webkit-media-controls-panel {
   text-align: center;
   background-repeat: no-repeat;
   min-height: 300px;
+  background-size: cover;
 }
 .media_setup_last_card .media_setup_contents_footer a {
   background-color: #00d9f5;
@@ -1083,7 +1084,7 @@ audio::-webkit-media-controls-panel {
   color: #fff;
   border-radius: 50px;
   border: transparent;
-  padding: 20px;
+  padding: 12px;
   border: 2px solid;
   font-size: 16px;
   font-weight: 500;
@@ -1096,24 +1097,33 @@ audio::-webkit-media-controls-panel {
   max-height: 80%;
   overflow: auto;
   margin: 0 20px;
-  max-width: 650px;
+  max-width: 550px;
 }
 .editProfileHeader {
   position: sticky;
   top: -20px;
   background-color: #fff;
   padding: 10px;
+  padding-bottom: 15px;
   border-bottom: 1px solid #edf0f7;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row-reverse;
+  z-index: 9999;
+}
+.editProfilePopup label + h4 {
+  margin-top: 15px;
 }
 .edit_password_wrapper {
-  margin-top: 25px;
+  /* margin-top: 15px; */
   width: 100%;
 }
 .edit_password_wrapper h2 {
   margin-bottom: 15px;
 }
 .closeIcon {
-  position: absolute;
+  /* position: absolute; */
   top: 10px;
   right: 10px;
   font-size: 24px;
@@ -1129,10 +1139,10 @@ audio::-webkit-media-controls-panel {
   /* flex-direction: column; */
   margin-top: 20px;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 20px 10px;
 }
 .editProfilePopup label {
-  margin-bottom: 30px;
+  /* margin-bottom: 10px; */
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -1140,7 +1150,62 @@ audio::-webkit-media-controls-panel {
   font-size: 14px;
   width: calc(50% - 8px);
 }
+/* custom profile pic upload */
+.customFileInput {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
 
+.hiddenInput {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.editProfilePopup .customFileLabel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 14px 14px;
+  background-color: #f8f7fc;
+  border: 1px solid #e1e7ff;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+  flex-direction: row;
+  width: 100%;
+  border-radius: 50px;
+  font-size: 13px;
+}
+
+.customFileLabel:hover {
+  background-color: #e0e0e0;
+  border-color: #999;
+}
+
+.customFileLabel i {
+  margin-right: 10px;
+  font-size: 18px;
+}
+.editProfilePopup label.fw_100 {
+  width: 100%;
+}
+.edit_password_wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.edit_password_wrapper label span {
+  color: #888;
+  font-size: 12px;
+  font-weight: 500;
+}
 .editProfilePopup form button {
   width: 100%;
 }
@@ -1150,7 +1215,7 @@ audio::-webkit-media-controls-panel {
   border-radius: 50px;
 }
 .editProfilePopup input {
-  font-size: 14px;
+  font-size: 13px;
   border: 1px solid #e1e7ff;
   background-color: #f8f7fc;
 }
@@ -1450,11 +1515,11 @@ audio::-webkit-media-controls-panel {
 .offerForm button[type="submit"] {
   border: transparent;
   background: #00d9f5;
-  padding: 6px 10px;
+  padding: 6px 11px;
   border-radius: 50%;
   position: absolute;
-  right: 5px;
-  top: 8px;
+  right: 8px;
+  top: 7px;
 }
 .offerForm button span {
   color: #fff;
@@ -1642,7 +1707,7 @@ audio::-webkit-media-controls-panel {
 .paymentMethodcard_section .popup select {
   width: 100%;
   padding: 15px;
-  margin: 15px 0;
+  margin-top: 15px;
   border: 1px solid #edf0f7;
   border-radius: 50px;
   font-size: 14px;
@@ -1660,9 +1725,13 @@ audio::-webkit-media-controls-panel {
   color: #666666;
   font-size: 12px;
 }
+.paymentMethodcard_section .popup_content h4 {
+  margin-bottom: 8px;
+}
 .paymentMethodcard_section .popup_actions {
   display: flex;
   justify-content: center;
+  margin-top: 15px;
 }
 
 .paymentMethodcard_section .close_button,
@@ -1719,7 +1788,7 @@ audio::-webkit-media-controls-panel {
   border: transparent;
   border: 1px solid #edf0f7;
   padding: 10px 20px;
-  border-radius: 20px;
+  border-radius: 50px;
   cursor: pointer;
 }
 .paymentMethodcard_section label p {
